# cookiecutter-python-simple

./: cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: Dockerfile  Makefile  README.rst  db_init.sql  requirements.txt  requirements_dev.txt  serverless.yml  setup.cfg
{{cookiecutter.project_name}}/tests/: test_app.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: app.py  schemas.py
