{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License',
    'BSD license': 'License :: OSI Approved :: BSD License',
    'ISC license': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}

[metadata]
name = {{ cookiecutter.project_slug }}
version = {{ cookiecutter.version }}
author = {{ cookiecutter.full_name.replace('\"', '\\\"') }}
author_email = {{ cookiecutter.email }}
{%- if cookiecutter.open_source_license in license_classifiers %}
    license="{{ cookiecutter.open_source_license }}",
{%- endif %}
description = {{ cookiecutter.project_short_description }}
keywords = {{ cookiecutter.project_slug }} 
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = {{ cookiecutter.project_slug }}
zip_safe = False
include_package_data = True
install_requires = {{ "\n    ".join([""] +cookiecutter.requirements.split(","))  }}

[options.extras_require]
testing =
    pip
    flake8
    flake8-print
    tox
    coverage
    pytest
    pyflakes
    pytest-cov
    bandit
    black
    isort
    wheel
    twine
    build

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length=120

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
combine_as_imports=true
